tools/sddl2/assembler/tests/success/load_i8_positive.asm
# Test: load.i8 - assembler test
# Verify load.i8 instruction assembles correctly
push.i32 0
load.i8
halt
